--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Icons provided by Roberto Huertas and his VSCode icon pack visit https://icon-icons.com/pack/vscode/2107  */ 
+
 /*============================     Top Level      ============================ */
 li{
     list-style-type: none;
@@ -36,6 +38,17 @@ li{
     position: absolute;
     
 }
+.aboutMe__Container--background2{
+    height: 50%;
+    width: 55%;
+    background-color: #2A5AAD;
+    border-radius: 7px;
+    transform: translate(55px , 180px) rotate(-1deg);
+    z-index: -2;
+    position: absolute; 
+   ;
+     
+}
 
 .aboutMe__detail{
     height: 12%;
@@ -47,8 +60,8 @@ li{
     ;
 }
 .aboutMe__picture--img{
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250;
     border-radius: 50%;
     border: 5px solid #70A5FF;
     
@@ -69,6 +82,11 @@ li{
     display:flex;
     align-content: space-evenly;
     
+}
+
+.icon{
+    height: 50px;
+    width: 50px;
 }
 
 .skill{
